--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "puppet/modules/apache"]
 	path = puppet/modules/apache
-	url = https://github.com/puppetlabs/puppetlabs-apache.git
+	url = https://github.com/example42/puppet-apache
 [submodule "puppet/modules/mysql"]
 	path = puppet/modules/mysql
-	url = https://github.com/puppetlabs/puppetlabs-mysql.git
+	url = https://github.com/example42/puppet-mysql
